# neo-triage-hack

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  LICENSE  README.md  nixpacks.toml  pyproject.toml  railway.json
backend/: __init__.py  main.py
backend/agent/: logger.py  loop.py  mock_feed.py  notifier.py  state.py
backend/data/: __init__.py  imminent_impactors_catalog.json  mock_candidates.py  neocp_fetcher.py  population_grid.py  yr4_replay.py
backend/models/: __init__.py  external.py  (+3 more)
docs/: api-contract.md  data-classification-provenance.md  day2-morning-backlog.md  demo-script-v1.md  demo-script-v2.md  demo-script-v3.md  demo-script-v4.md  demo-script-v5.md  deploy-urls.md  deployment.md  mike-brown-session-notes.md  production-readiness-roadmap.md  prompt-selection.md  sky-viz-research.md  submission-form-prep.md  timeline-transparency.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
models/: ranker-v0.1-metadata.json
reports/: jpl-patches.txt
scripts/: apply_jpl_patches.py  test_prompts.py  train_ranker.py  verify_current_positions.py  verify_jpl_orbital_elements.py
tests/: test_agent.py  test_agent_with_expert.py  test_astrometric_quality.py  test_briefing_engine.py  test_candidates.py  test_energetics.py  test_esa_neocc_client.py  test_expert_classifier.py  test_health.py  test_imminent_impactors_api.py  test_imminent_impactors_catalog.py  test_impact_damage_model.py  test_impactor_case_designation.py  test_jpl_cad_client.py  test_jpl_sentry_client.py  test_ranker.py  test_replay.py
(+99 files in other folders)
